tests/build/fromlifetimes.stderr
error: Deriving structs with more than one lifetime is not supported
 --> $DIR/fromlifetimes.rs:4:15
  |
4 | struct Derived<'a, 'b> {
  |               ^^^^^^^^
